--- a/main_file.ipynb
+++ b/main_file.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from mylib.functions import (\n",
+    "from mylib.lib import (\n",
     "    readData,\n",
     "    cleanData,\n",
     "    summaryStatistics,\n",
