--- a/main_file.ipynb
+++ b/main_file.ipynb
@@ -196,7 +196,7 @@
     }
    ],
    "source": [
-    "piePlotStudents = PiePlot(CleanData, PctIntlStudents, SchoolName)"
+    "piePlotStudents = PiePlot(CleanData, PctIntlStudents, SchoolName, \"piePlotStudents.png\")"
    ]
   },
   {
@@ -216,7 +216,7 @@
     }
    ],
    "source": [
-    "piePlotFaculty = PiePlot(CleanData, PctIntlFaculty, SchoolName)"
+    "piePlotFaculty = PiePlot(CleanData, PctIntlFaculty, SchoolName, \"piePlotStudents.png\")"
    ]
   },
   {
@@ -236,7 +236,7 @@
     }
    ],
    "source": [
-    "BarChart = tripleBarPlot(CleanData, SchoolName, RankNames)\n"
+    "BarChart = tripleBarPlot(CleanData, SchoolName, RankNames, \"barPlotUniversityRank.png\")"
    ]
   },
   {
