--- a/main_file.ipynb
+++ b/main_file.ipynb
@@ -216,7 +216,7 @@
     }
    ],
    "source": [
-    "piePlotFaculty = PiePlot(CleanData, PctIntlFaculty, SchoolName, \"piePlotStudents.png\")"
+    "piePlotFaculty = PiePlot(CleanData, PctIntlFaculty, SchoolName, \"piePlotFaculty.png\")"
    ]
   },
   {
